fix(sidebar): reduce sidebar extra space with toggle negative margin
- remove `min-height: 100vh;` from toggle
- move `:hover` toggle effects to the actual button
- adjust toggle container width to match its button width

--- a/core/scss/components/sidebar/sidebar.scss
+++ b/core/scss/components/sidebar/sidebar.scss
@@ -51,30 +51,29 @@
       min-width: 0;
     }
 
-    &:hover + .md-sidebar__toggle {
-      opacity: 1.0;
-    }
-
     &__toggle {
       display: flex;
       z-index: 7;
-      width: 12px;
-      min-height: 100vh;
+      width: 16px;
+      margin-right: -16px;
       padding: 0;
       text-decoration: none;
       box-shadow: none;
       flex-direction: column;
       justify-content: center;
       top: 0;
-      opacity: 0.0;
 
-      &:hover{
-        opacity: 1.0;
+      & .md-collapse-button {
+        opacity: 0.0;
+
+        &:hover{
+          opacity: 1.0;
+        }
       }
     }
 
-    &__toggle--collapsed {
-      margin-left: 0;
+    &:hover + .md-sidebar__toggle .md-collapse-button,
+    &__toggle--collapsed .md-collapse-button {
       opacity: 1.0;
     }
 
